change button color

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
         }
  
         .todo-button:hover {
-            background-color: #45a049;
+            background-color: #9ea045;
         }
 
         .todo-list {
